--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@gsap/react": "^2.1.2",
+    "@types/pdfjs-dist": "^2.10.377",
     "next": "15.3.4",
+    "pdfjs-dist": "^4.8.69",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
